@@ -45,16 +45,13 @@ public class MonopolyView implements PositionChangeObserver {
   public GenericGameView genericGameView = new GenericGameView();
   private Game game;
   private final int playerSize = 25;
+  private final int pivotX = playerSize / 2;
+  private final int pivotY = playerSize;
 
   MonopolyController monopolyController = new MonopolyController();
   public BorderPane mainLayout = new BorderPane();
   StackPane mainPane;
 
-  /**
-   * Creates the main layout for the monopoly game.
-   *
-   * @return The main layout for the monopoly game.
-   */
   public BorderPane mainLayout() {
     mainLayout.setId("mainLayout");
 
@@ -77,7 +74,7 @@ public class MonopolyView implements PositionChangeObserver {
         currentStage.setScene(mainMenuScene);
         currentStage.setTitle("Main Menu");
       } catch (IOException ex) {
-        PopupView.showInfoPopup("Error!", "Could not load the main menu.");
+        ex.printStackTrace();
       }
     });
     topMenu.getChildren().addAll(newGameButton, backToMenuButton);
@@ -93,11 +90,6 @@ public class MonopolyView implements PositionChangeObserver {
     return mainLayout;
   }
 
-  /**
-   * Sets the game board for the monopoly game.
-   *
-   * @param game The game object to set the board for.
-   */
   public void setGameBoard(Game game) {
     this.game = game;
     GridPane gameBoard = new GridPane();
@@ -184,8 +176,7 @@ public class MonopolyView implements PositionChangeObserver {
       playerImage.setFitWidth(playerSize);
       playerImage.setFitHeight(playerSize);
       //rotate by the bottom middle of the image
-      int pivotX = playerSize / 2;
-      Rotate rotate = new Rotate(72 * index, pivotX, playerSize);
+      Rotate rotate = new Rotate(72 * index, pivotX, pivotY);
       playerImage.getTransforms().add(rotate);
       playerImage.setTranslateY(-10);
       index++;
@@ -198,14 +189,9 @@ public class MonopolyView implements PositionChangeObserver {
     gameBoard.setGridLinesVisible(false);
     gameBoard.setId("gameBoardFinal");
     updateSideBar();
-    showPlayerCards(game.getPlayers().getFirst());
+    showPlayerCards(game.getPlayers().get(0));
   }
 
-  /**
-   * Updates the position of the player on the board and shows the players cards.
-   *
-   * @param player The plauyer whos to be updated.
-   */
   @Override
   public void positionChanged(Player player) {
     showPlayerCards(player);
@@ -216,7 +202,7 @@ public class MonopolyView implements PositionChangeObserver {
     Node node = mainLayout.lookup("#" + id);
     Rotate rotate = null;
     if (node != null) {
-      rotate = (Rotate) node.getTransforms().getFirst();
+      rotate = (Rotate) node.getTransforms().get(0);
       ((Pane) node.getParent()).getChildren().remove(node);
     }
     ImageView playerImage = new ImageView(player.getPicture().toExternalForm());
@@ -228,11 +214,14 @@ public class MonopolyView implements PositionChangeObserver {
     stackPane.getChildren().add(playerImage);
 
     Tile tile = game.getBoard().getGameboard().get(player.getPosition() - 1);
-    switch (tile) {
-      case ChanceCardTile chanceCard -> showChanceCard(chanceCard.getActiveChanceCard());
-      case PropertyTile propertyTile -> showProperty(propertyTile.getProperty());
-      case JailTile ignored when player.getJailStatus() == 1 -> inJailText(player);
-      case null, default -> clearMiddleCard();
+    if (tile instanceof ChanceCardTile chanceCard) {
+      showChanceCard(chanceCard.getActiveChanceCard());
+    } else if (tile instanceof PropertyTile propertyTile) {
+      showProperty(propertyTile.getProperty());
+    } else if (tile instanceof JailTile && player.getJailStatus() == 1) {
+      inJailText(player);
+    } else {
+      clearMiddleCard();
     }
 
     Label positionLabel = (Label) mainLayout.lookup("#position" + player.getPlayerNumber());
@@ -261,14 +250,6 @@ public class MonopolyView implements PositionChangeObserver {
     monopolyController.checkForWinner(game);
   }
 
-  /**
-   * Gets the tile at the specified column and row in the grid.
-   *
-   * @param grid The grid pane to search in.
-   * @param col  The column index of the tile.
-   * @param row  The row index of the tile.
-   * @return The stack pane at the specified column and row, or null if not found.
-   */
   private StackPane getTileAt(GridPane grid, int col, int row) {
     for (Node node : grid.getChildren()) {
       if (GridPane.getColumnIndex(node) == col && GridPane.getRowIndex(node) == row) {
@@ -278,11 +259,6 @@ public class MonopolyView implements PositionChangeObserver {
     return null;
   }
 
-  /**
-   * Shows the cards of the specified player.
-   *
-   * @param player The player whose cards to show.
-   */
   public void showPlayerCards(Player player) {
     HBox cardBox = new HBox();
 
@@ -300,12 +276,6 @@ public class MonopolyView implements PositionChangeObserver {
     mainLayout.setBottom(scroll);
   }
 
-  /**
-   * Gets the property card for the specified property.
-   *
-   * @param property The property to get the card for.
-   * @return The VBox containing the property card.
-   */
   private VBox getPropertyCard(Property property) {
     Player activePlayer = game.getPlayers().get(game.getActivePlayer());
     VBox card = new VBox(5);
@@ -325,7 +295,7 @@ public class MonopolyView implements PositionChangeObserver {
     rect.setFill(Color.valueOf(property.getColor()));
     nameHolder.getChildren().addAll(rect, name);
 
-    if (!property.isPawned()) {
+    if (property.isPawned() == false) {
       card.setStyle(
           "-fx-background-color: white; -fx-border-color: black; -fx-border-width: 2px; -fx-border-style: solid;");
 
@@ -409,7 +379,7 @@ public class MonopolyView implements PositionChangeObserver {
       }
       return card;
 
-    } else if (property.isPawned()) {
+    } else if (property.isPawned() == true) {
 
       Button rePurchaseButton = new Button("Re-purchase property");
       rePurchaseButton.setOnAction(e -> {
@@ -439,7 +409,7 @@ public class MonopolyView implements PositionChangeObserver {
 
     throwDice.setOnAction(e -> {
       activePlayer = game.getPlayers().get(game.getActivePlayer());
-      if (game.getGameStatus() && activePlayer.getJailStatus() == 0) {
+      if (game.getGameStatus() == true && activePlayer.getJailStatus() == 0) {
         monopolyController.throwDice(game, activePlayer);
       } else if (activePlayer.getJailStatus() >= 1) {
         inJailOptions(activePlayer);
@@ -448,7 +418,7 @@ public class MonopolyView implements PositionChangeObserver {
 
     Button tradeButton = new Button("Trade");
     tradeButton.setOnAction(e -> {
-      if (game.getGameStatus()) {
+      if (game.getGameStatus() == true) {
         TradeView tradeView = new TradeView();
         tradeView.showTradeView(game, activePlayer);
       } else {
@@ -498,11 +468,6 @@ public class MonopolyView implements PositionChangeObserver {
     mainLayout.setRight(rightMenu);
   }
 
-  /**
-   * Shows the chance card in the middle of the board.
-   *
-   * @param chanceCard The chance card to show.
-   */
   private void showChanceCard(ChanceCard chanceCard) {
     GridPane board = (GridPane) mainLayout.lookup("#gameBoardFinal");
 
@@ -529,11 +494,6 @@ public class MonopolyView implements PositionChangeObserver {
     chanceCardPane.toFront();
   }
 
-  /**
-   * Shows the property in the middle of the board.
-   *
-   * @param property The property to show.
-   */
   private void showProperty(Property property) {
     GridPane board = (GridPane) mainLayout.lookup("#gameBoardFinal");
     clearMiddleCard();
@@ -571,9 +531,6 @@ public class MonopolyView implements PositionChangeObserver {
     propertyPane.toFront();
   }
 
-  /**
-   * Clears the middle card from the board.
-   */
   private void clearMiddleCard() {
     GridPane board = (GridPane) mainLayout.lookup("#gameBoardFinal");
     if (board != null) {
@@ -583,11 +540,6 @@ public class MonopolyView implements PositionChangeObserver {
     }
   }
 
-  /**
-   * Shows the text when a player goes to jail.
-   *
-   * @param player The player who went to jail.
-   */
   private void inJailText(Player player) {
     GridPane board = (GridPane) mainLayout.lookup("#gameBoardFinal");
     clearMiddleCard();
@@ -607,11 +559,6 @@ public class MonopolyView implements PositionChangeObserver {
     stackPane.toFront();
   }
 
-  /**
-   * Shows the options for a player in jail.
-   *
-   * @param player The player who is in jail.
-   */
   private void inJailOptions(Player player) {
     GridPane board = (GridPane) mainLayout.lookup("#gameBoardFinal");
     clearMiddleCard();
@@ -657,3 +604,4 @@ public class MonopolyView implements PositionChangeObserver {
     stackPane.toFront();
   }
 }
+
